deploy-smart-agent.yml
---
apiVersion: v1
kind: Service
metadata:
  name: smart-agent
spec:
  ports:
  - port: 99
    targetPort: 9999
    protocol: TCP
  selector:
    app: smart-agent
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smart-agent
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: smart-agent.ice.local
    http:
      paths:
      - path: /
        backend:
          serviceName: smart-agent
          servicePort: 99
